fix image position

--- a/content/blog/1. scroll-smooth.md
+++ b/content/blog/1. scroll-smooth.md
@@ -3,6 +3,7 @@ title: 'How to scroll smooth?'
 description: 'Scroll smooth with only javascript'
 img: 'img/scroll-smooth.jpeg'
 tags: [javascript, tips]
+objectPosition: 'top'
 ---
 
 ## Scroll Smooth
